# Spygate

./: .coverage.nines.58332.XNjeNKbx.c  .coveragerc  .dockerignore  .env.database  .env.example  .env.logging  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .windsurfrules  ADVANCED_SITUATION_IMPLEMENTATION_SUMMARY.md  ADVANCED_SITUATION_TRACKING.md  BEST_COMBO_20250614_213332.json  BUILD_INSTRUCTIONS.md  CLIP_BOUNDARY_FIX_SUMMARY.md  CLIP_DETECTION_FIXES_SUMMARY.md  CLIP_SEGMENTATION_FIX_README.md  COMPLETE_INTEGRATION_GUIDE.md  COMPLETE_SYSTEM_SUMMARY.md  CONFIDENCE_IMPROVEMENT_PLAN.md  CRITICAL_BUG_FIXES_SUMMARY.md  CURRENT_LOGIC_ANALYSIS.md  DESKTOP_README.md  Dockerfile  ENHANCED_DOWN_DETECTION_SUMMARY.md  ENHANCED_SIMPLECLIPDETECTOR_SUMMARY.md  EXISTING_LOGIC_ANALYSIS.md  FRESH_MODEL_INTEGRATION_COMPLETE.md  GPU_MEMORY_TESTING_RESULTS.md  INSTALLATION.md  INTELLIGENT_CLIP_BOUNDARY_SYSTEM.md  LAST_7_HOURS_PROGRESS_SUMMARY.md  LICENSE  LICENSE.txt  MADDEN_OCR_README.md  NEW_TRAINING_APPROACH_SUMMARY.md  NEXT_LEVEL_GAME_ANALYSIS.md  OCR_ENHANCEMENT_GUIDE.md  PRODUCTION_GUIDE.md  (+493 more)
.venv-3.12/: pyvenv.cfg
augmented_triangle_annotations/: additional_monitor3_screenshot_20250608_021042_6_0000.json  additional_monitor3_screenshot_20250608_021042_6_copy_0001_0000.json  additional_monitor3_screenshot_20250608_021042_6_copy_0002_0000.json  additional_monitor3_screenshot_20250608_021042_6_copy_0003_0000.json  additional_monitor3_screenshot_20250608_021042_6_copy_0004_0000.json  additional_monitor3_screenshot_20250608_021042_6_copy_0005_0000.json  additional_monitor3_screenshot_20250608_021042_6_copy_0006_0000.json  additional_monitor3_screenshot_20250608_021042_6_copy_0007_0000.json  additional_monitor3_screenshot_20250608_021042_6_copy_0008_0000.json  additional_monitor3_screenshot_20250608_021042_6_copy_0009_0000.json  additional_monitor3_screenshot_20250608_021042_6_copy_0010_0000.json  (+2393 more)
data/: cross_game_intelligence.db  (+2 more)
(+3138 files in other folders)
