[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spygate"
version = "1.0.0"
authors = [
  { name="Spygate Team" },
]
description = "A tool for analyzing Madden NFL 25 gameplay"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "PyQt6>=6.9.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["spygate*"]
namespaces = false 